# github_statistics

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  PROMPT.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
ADR/: 0001-group-only-reporting.md  0002-thresholds.md  0003-active-member-definition.md  0004-override-governance.md
github_statistics/: __init__.py  cli.py  collector.py  config.py  github_client.py  models.py  report_md.py  stats.py
tests/: __init__.py  test_cli_args.py  test_cli_end_to_end.py  test_collector_with_fake_client.py  test_config_loading.py  test_data_protection_policy.py  test_github_client_http.py  test_github_client_interface.py  test_models.py  test_project_structure.py  test_report_md.py  test_stats_ready_for_review.py  test_stats_repo_metrics.py  test_stats_user_metrics.py  test_verbose_logging.py  test_version.py
